--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "amd": {},
     "repository": {
         "type": "git",
-        "url": "https://github.com/raphaelstary/highfive.js.git"
+        "url": "https://github.com/raphaelstary/colofulshooting.git"
     },
     "devDependencies": {
         "uglify-js": "~2.4.15",
